--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,14 @@
 }
 
 .App-logo {
+  margin-bottom: 50px;
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
+    border-radius: 100%;
     animation: App-logo-float infinite 3s ease-in-out;
   }
 }
