--- a/src/features/counter/Counter.module.css
+++ b/src/features/counter/Counter.module.css
@@ -16,6 +16,7 @@
   font-size: 78px;
   padding-left: 16px;
   padding-right: 16px;
+  margin-bottom: 20px;
   margin-top: 2px;
   font-family: 'Courier New', Courier, monospace;
 }
